Attribute and quantity alignment issue resolved

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -165,6 +165,7 @@
                 float: none;
                 display: inline-block;
                 margin-bottom: 3rem;
+                margin-left: 27px;
                 &:last-child {
                     margin-bottom: 0;
                 }
